# flutter-boilerplate

./: .gitignore  README.md  build.yaml  graphql.config.js  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/kotlin-lib/: local.properties  settings.gradle.kts
ios/Runner.xcodeproj/: project.pbxproj
lib/: assets.dart  env.dart  main.dart  main_dev.dart  main_prod.dart  my_app.dart  routes.dart
lib/components/: anime_image_view.dart  auto_height_sliver_grid.dart  automatic_keep_alive_client.dart  bgm_app_bar.dart  bgm_flexible_space_bar.dart  center_scroll.dart  circle.dart  click_outside.dart  custom_map.dart  fade_out.dart  floatingRollMenu.dart  floating_roll_menu.dart  future_cache_builder.dart  load_more.dart  platform_view.dart  swipe_to_refresh.dart  transition.dart  video_view.dart
lib/db/: db.dart  db.g.dart  log.dart
lib/graphql/: github.data.gql.dart  github.req.gql.dart  github.req.gql.g.dart  github.var.gql.dart  schema.ast.gql.dart  schema.graphql  schema.schema.gql.dart  schema.schema.gql.g.dart  serializers.gql.dart  serializers.gql.g.dart
lib/models/: account.dart  account.g.dart  comment.dart  comment.g.dart  load_state.dart  load_state.freezed.dart  paged_data.dart  paged_data.freezed.dart  weather.dart  weather.g.dart  weather_one_day.dart  weather_one_day.g.dart
lib/services/: bgm.dart  (+1 more)
protos/: book.proto
rust-lib/dart-ffi/: Cargo.toml
rust-lib/dart-ffi/src/: lazy.rs  lib.rs
shaders/: ui_glitch.frag
test/: selector_media_source_engine_test.dart  test_utils.dart  widget_test.dart
(+94 files in other folders)
