[package]
name = "dart-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allo-isolate = {version = "^0.1", features = ["catch-unwind",]}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time"] }
lazy_static = {version = "1.4.0"}